"fx debug" => "ffx debug connect"
"ffx debug" is the next generation of "fx debug", which improves the
startup speed significantly and is also available out of Fuchsia tree.

--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
         "zxdb.command": {
           "scope": "window",
           "type": "string",
-          "default": "fx debug -- --enable-debug-adapter",
+          "default": "ffx debug connect -- --enable-debug-adapter",
           "description": "Command to start zxdb console. Make sure to include --enable-debug-adapter flag."
         },
         "zxdb.timeout": {
