--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zxdb",
   "displayName": "zxdb",
   "description": "Fuchsia debugger",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publisher": "fuchsia-authors",
   "license": "Apache-2.0",
   "engines": {
@@ -196,19 +196,19 @@
   },
   "dependencies": {
     "await-notify": "1.0.1",
-    "vscode-debugadapter": "1.40.0"
+    "vscode-debugadapter": "^1.51.0"
   },
   "devDependencies": {
-    "@types/vscode": "^1.48.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.11.7",
-    "eslint": "^7.19.0",
+    "@types/vscode": "^1.48.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.19.0",
     "glob": "^7.1.6",
-    "mocha": "^8.2.1",
+    "mocha": "^9.2.2",
     "typescript": "^4.1.3",
-    "vscode-test": "^1.5.0"
+    "vscode-test": "^1.4.1"
   }
 }
